# hexlet_pytest

./: .coverage  pyproject.toml
tests/: test_example.py  test_stack.py
